Makemake, comet, Vesta

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -8,7 +8,7 @@ link: asteroid-belt
                 <p class="paragraph">
                     The asteroid belt is a region in the <a href="solar-system.html">Solar System</a>, located roughly between the orbits of the <a href="planet.html">planets</a> <a href="jupiter.html">Jupiter</a> and <a href="mars.html">Mars</a>. 
                     It contains many irregularly shaped bodies called <a href="asteroid.html">asteroids</a> or minor planets. 
-                    This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as near-Earth asteroids and <a href="trojan.html">trojan</a> asteroids.</p>
+                    This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as <a href="nea.html">near-Earth asteroids</a> and <a href="trojan.html">trojan</a> asteroids.</p>
                 <h2 class="paragraphheader" id="DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</h2>
                 <p class="paragraph">
                     In 1596, Johannes Kepler assumed that there must be a planet between Mars and Jupiter, due to the gap between the planets. 
@@ -108,7 +108,7 @@ link: asteroid-belt
                         It is named after the Roman goddess of the home and family. 
                         Vesta's shape is close to an oblate spheroid, but is not a dwarf planet, because it is not in hydrostatic equilibrium.
                         It is believed that Vesta used to be in hydrostatic equilibrium and still has differentiated internal structure, but lost its round shape.
-                        A recognisable feature is the Rheasilva crater, which has left a mountain that is almost as tall as Olympus Mons on Mars.
+                        A recognisable feature is the Rheasilvia crater, which has left a mountain that is almost as tall as Olympus Mons on Mars.
                     </p>
                 </div>
                 <div class="articlediv">
