--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -31,7 +31,7 @@ link: asteroid
                     Similarly, the asteroid Thule was discovered in 1888, which is even further away from the asteroid belt and closer to Jupiter.
                     Max Wolf pioneered the use of photography to discover asteroids since 1891.
                     He alone discovered 248 asteroids.
-                    The first near-Earth asteroid to be discovered was Eros in 1898.
+                    The first <a href="nea.html">near-Earth asteroid</a> to be discovered was Eros in 1898.
                     Achiles was the first <a href="trojan.html">trojan</a> of Jupiter to be discovered in 1906 by Wolf himself.
                     New asteroids were discovered at a much higher rate, requiring more complex provisional naming schemes before getting approved by the Minor Planet Center.
                 </p>
@@ -105,6 +105,7 @@ link: asteroid
                         <p class="caption">Eros, a well-studied near-Earth asteroid</p>
                     </div>
                     <h3 class="paragraphsubheader" id="NearEarthAsteroids">Near-Earth asteroids</h3>
+                    <p class="readmore">Main article: <a href="nea.html">Near-Earth asteroid</a></p>
                     <p class="paragraph">
                         Near-Earth asteroids are a group of several families of asteroids tha orbit close to Earth.
                         Due to their proximity to Earth, they are of significant interest and are easier to detect than other small families near other planets.
