--- a/pages/ceres.html
+++ b/pages/ceres.html
@@ -45,6 +45,10 @@ link: ceres
                     Franz Xaver von Zach and Johann Elert Bode refered to the planet as Hera and Juno, the Greek and Roman queen of the gods respectively.
                     For a while, this name stuck in Germanic-speaking states, though astronomer Karl Harding discovered another asteroid, now bearing the name Juno, and the name the discoverer Giuseppe Piazzi chose stuck
                 </p>
+                <p class="paragraph">
+                    In Greek, Ceres is refered to as Demeter (Δήμητρα, Dimitra).
+                    In Chinese, the name translates to "grain-god-star" (穀神星, Gǔshénxīng), a similar naming scheme to that of Uranus, Neptune, and <a href="pluto.html"> Pluto</a>.
+                </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
                     Ceres orbits around the <a href="sun.html">Sun</a> for 4.6 <a href="earth.html">Earth</a> years.
