--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -206,7 +206,7 @@ link: dwarf-planet
                         It is named after the Greek god of the underworld, also known as Hades. 
                         After it's discovery, Pluto was considered to be a planet, until 2006, when the IAU recategorized it as a dwarf planet.
                         It is composed of mostly nitrogen ice and rock.
-                        Pluto has five <a href="natural-satellite.html">satellites</a>. 
+                        Pluto has <a href="satellites-of-pluto.html">five satellites</a>. 
                         The biggest moon - <a href="charon.html">Charon</a>, named after the ferryman of Hades, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
                 </div>
