--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -193,7 +193,7 @@ link: natural-satellite
                     </div>
                     <h2 class="paragraphheader" id="SatellitesOfDwarfPlanets">Satellites of dwarf planets</h2>
                     <p class="paragraph">
-                        <a href="pluto.html">Pluto</a> has five satellites - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos and Styx. 
+                        <a href="pluto.html">Pluto</a> has <a href="satellites-of-pluto.html">five satellites</a> - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos and Styx. 
                         Names originate from Greek mythology and are related to the underworld. 
                         The biggest moon - Charon, named after the ferryman of the underworld, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
