--- a/pages/planet.html
+++ b/pages/planet.html
@@ -189,8 +189,8 @@ link: planet
                         The difference is that unlike regular planets, dwarf planets do not make up the majority of the mass in their orbit apart from their satellites.
                     </p>
                     <p class="paragraph">
-                        The objects that lead to the IAU's definition of dwarf planets are Pluto, Eris and Ceres. 
-                        Haumea and Makemake were later added to the group of dwarf planets defined by the IAU. 
+                        The objects that lead to the IAU's definition of dwarf planets are Pluto, Eris, Haumea, and Makemake. 
+                        Ceres was later added to the group of dwarf planets defined by the IAU, since it was also found to be round. 
                         Other astronomers also include other <a href="tno.html">TNOs</a> to the list - <a href="gonggong.html">Gonggong</a>, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, and <a href="orcus.html">Orcus</a>. 
                         These nine are widely refered to as dwarf planets, even though some of them are not proven to be in hydrostatic equilibrium (to be round enough). 
                         Other objects that might be dwarf planets are <a href="salacia.html">Salacia</a>, Varda, Ixion, Gǃkúnǁʼhòmdímà and Varuna, though albedo, composition data and density suggest that they are more unlikely to have differentiated.
