--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -138,6 +138,7 @@ link: pluto
                         <p class="caption">Charon, the largest Plutonian satellite</p>
                     </div>
                     <h2 class="paragraphheader" id="Satellites">Satellites</h2>
+                    <p class="readmore">Main article: <a href="satellites-of-pluto.html">Satellites of Pluto</a></p>
                     <p class="paragraph">
                         Pluto is orbited by five known natural satellites - Charon, Hydra, Nix, Kerberos and Styx. 
                         Names originate from Greek mythology and are related to the underworld. 
