--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -78,7 +78,7 @@ link: solar-system
                     </div>
                     <p class="paragraph">
                         There are only three natural satellites orbiting these planets - the <a href="moon.html">Moon</a>, which orbits the Earth, and <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>, which orbit Mars.
-                        Other bodies that orbit the Sun around the terrestial planets are numerous asteroid populations, including Near-Earth asteroids.
+                        Other bodies that orbit the Sun around the terrestial planets are numerous asteroid populations, including <a href="nea.html">near-Earth asteroids</a>.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -159,16 +159,16 @@ link: solar-system
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right h180">
-                        <img class="articleimage" src="../assets/images/other/halley-1986.jpg" alt="Halley comet in 1986">
-                        <p class="caption">The Halley comet seen from Earth in 1986.</p>
+                        <img class="articleimage" src="../assets/images/other/halley-1986.jpg" alt="Comet Halley in 1986">
+                        <p class="caption">Halley's Comet seen from Earth in 1986.</p>
                     </div>
                     <h3 class="paragraphheader" id="Comets">Comets</h3>
                     <p class="readmore">Main article: <a href="comet.html">Comet</a></p>
                     <p class="paragraph">
-                        Comets are icy bodies that originate from the outer reaches of the Solar System and begin to release gases when approaching their perihelion.
+                        Comets are icy bodies that originate from the outer reaches of the Solar System and begin to release dust and gases when approaching their perihelion.
                         These vapors form a glowing coma and often a tail that can stretch millions of kilometers.
                         They are composed of ice, dust, and organic compounds.
-                        Famous comets like Halley’s Comet and Comet Hale-Bopp have captivated human imagination for centuries, since they can be seen from Earth.
+                        Famous "great comets" like Halley’s Comet and Comet Hale-Bopp have captivated human imagination for centuries, since they can be seen from Earth.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
